# PCL2.Nova.App

./: .env.development  .env.production  .gitignore  .gitmodules  .prettierrc  COPYING  COPYING-CN  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  taupd.js  test  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug1.yml.disabled  bug2.yml.disabled  bug9.yml  ch.yml  config.yml  feature.yml
.github/workflows/: build-test.yml  pr_build.yml  publish.yml  publish_build.yml  release.yml
docs/: CODE_OF_CONDUCT
public/firework/: index.html
public/firework/css/: style.css
public/firework/js/: script.js
src/: App.vue  main.ts  metadata.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs  main.rs
src-tauri/src/core/: config.rs  logger.rs  mod.rs
src-tauri/src/core/minecraft/: minecraft.rs  mod.rs
src-tauri/src/core/minecraft/auth/: microsoft.rs  mod.rs  xbox.rs
src-tauri/src/core/minecraft/download/: mod.rs  modrinth_comp.rs  vanilla.rs
src-tauri/src/core/minecraft/file_struct/: mod.rs  version_asset_struct.rs
src-tauri/src/core/utils/: downloader.rs  mod.rs  net.rs
src-tauri/tests/: download.rs  minecraft.rs
src/app/: FrmDownloads.vue  FrmHome.vue  FrmLinks.vue  FrmOthers.vue  FrmSettings.vue
src/assets/: style.css  style.scss  tailwind.css
src/modules/: ModEventBus.ts  ModRouter.ts  ModUtils.ts
src/modules/rust/: ModLogger.ts
src/ui/components/: CompButton.vue  CompCard.vue  CompComboBox.vue  CompFireworks.vue  (+5 more)
(+15 files in other folders)
